@@ -1,6 +1,7 @@
 Version 1.2.2 (2010-xx-xx)
 	Added new file_data_name option that enables you to set the multipart file data param. Patch contributed by Alex Ganov.
 	Added new FILE_SIZE_ERROR type that will be triggered if the user selected a file that is to large or zero bytes.
+	Added new FILE_EXTENSION_ERROR type that will be triggered if you add a file with an invalid file extension.
 	Fixed so the plupload.buildUrl function uses the UTF compatible encodeURIComponent method instead of escape.
 	Fixed some issues with the HTML4 runtime if there wasn't any existing forms on the page.
 	Fixed some conflict issues with HTML4 runtime and forms with the input names of action or target.
